# robot-core

./: CMakeLists.txt  README.md  package.xml  setup.py
robot-core/: robot_logic.py  scan_relay.py  serial_bridge.py
robot_core/: __init__.py  serial_bridge.py
robot_core/debugging/: __init__.py  serial_bridge_debug.py
